src/styles/index.module.scss
// Small tablets and large smartphones (landscape view)
$screen-sm-min: 576px;
// Small tablets (portrait view)
$screen-md-min: 768px;
// Tablets and small desktops
$screen-lg-min: 992px;
// Large tablets and desktops
$screen-xl-min: 1200px;

@mixin sm {
	@media (min-width: #{$screen-sm-min}) {
		@content;
	}
 }

 @mixin md {
	@media (min-width: #{$screen-md-min}) {
		@content;
	}
 }
 
 @mixin lg {
	@media (min-width: #{$screen-lg-min}) {
		@content;
	}
 }
 
 @mixin xl {
	@media (min-width: #{$screen-xl-min}) {
		@content;
	}
 }

* {
	box-sizing: border-box;
}

html, body {
	height: 100%;
	width: 100%;
	margin: 0;
	padding: 0;
	font-family: 'Source Sans Pro';
	font-size: 16px;
	font-weight: 400;
	color: rgb(101, 101, 101)
}

h1, h2, h3, h4, h5, h6, p {
	margin: 0;
	font-weight: 300;
	line-height: 1.75rem;
	margin-bottom: 1rem;

}

h1 {
	font-size: 2rem;
	line-height: 2rem;
}

h2 {
	font-size: 1.8rem;
}

h3 {
	font-size: 1.6rem;
}

h6 {
	font-size: 1rem;
}

p {
	font-size: 0.85rem;
	line-height: 1.5rem;

	
	@include lg {
		font-size: 1rem;	
	}
}

ul li {
	padding: 0;
	margin: 0;
}

.first-image {
	background-image:  linear-gradient(rgba(76, 71, 119, 0.5), rgba(76, 71, 119, 0.5)), url('../../house_exterior.jpg');
	background-position: center center;
	background-size: cover;
	width: 100%;
	height: 17rem;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	color: white;
}

@keyframes fade-in {
	0% {
		opacity: 0;
	}
	100% {
		opacity: 1;
	}
}

.first-card {
	padding: 0 1.5rem;
	max-width: 31rem;
	text-align: center;
	animation-name: fade-in;
	animation-duration: 1000ms;
	animation-direction: normal;
	animation-fill-mode: forwards;
	animation-timing-function: ease-in;
}

.title-card {
	padding: 2rem;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	font-size: 0.85rem;

}

.title {
	color: white;
	margin-bottom: 0.7rem;
}

.title-description {
	margin-bottom: 0.9rem;
}

.about-text,
.recent-work {
	padding: 2rem 1.5rem;
	text-align: center;
}

.about-title,
.recent-work-title {
	background: linear-gradient(90deg, rgba(238, 101, 136, 0.95), rgba(246, 149, 96, 0.95));
	background-clip: text;
	-webkit-text-fill-color: transparent;
}

.qualifications {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	list-style: none;
    padding-left: 0;
}

.qualification {
	padding: 1rem;
	width: 50%;
	list-style: none;
	margin: 0;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
}

.qualification--1 {
	@extend .qualification;
	border-right: 1px solid rgb(213, 213, 213);
	border-bottom: 1px solid rgb(213, 213, 213);
}

.qualification--2 {
	@extend .qualification;
	border-bottom: 1px solid rgb(213, 213, 213);
}
.qualification--3 {
	@extend .qualification;
	border-right: 1px solid rgb(213, 213, 213);
}

.qualification--4 {
	@extend .qualification;
}

.qualification-outer {
	height: 4rem;
	width: 4rem;
	border-radius: 50%;
	border: 1px solid rgb(213, 213, 213);
	display: flex;
	justify-content: center;
	align-items: center;
	color: rgb(238, 101, 136);
}

.second-image {
	background-image:  linear-gradient(rgba(76, 71, 119, 0.5), rgba(76, 71, 119, 0.5)), url('../images/desert_house.jpg');
	background-position: center center;
	background-size: cover;
	width: 100%;
	height: 15rem;
}

.second-card {
	padding: 2rem 1.5rem;
	color: white;
	display: flex;
	flex-direction: column;
	align-items: center;
	height: 100%;
	text-align: center;
}

